[package]
name = "hub75_esp32"
version = "0.1.0"
authors = ["Kezi <keziolio123@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "hub75_esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = 2
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

frankenstein = { version = "0.37", default-features = false, features = ["telegram-trait"]}
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1"}

image = { version = "0.25", default-features = false, features = ["webp","png"] }
esp-idf-hal = "0.45.2"
esp-idf-sys = "0.36.1"
embedded-svc = "0.28"

thiserror = "2.0.6"
anyhow = "1.0.79"
base64 = "0.22.1"

[build-dependencies]
embuild = "0.33"
